--- a/src/main/webapp/admin/editVideo.xhtml
+++ b/src/main/webapp/admin/editVideo.xhtml
@@ -65,7 +65,7 @@
                         <p:commandButton id="back" value="Back" ajax="false" action="listVideos?faces-redirect=true" />
                         <p:commandButton id="deleteButton" value="Delete video" actionListener="#{videoController.removeSelectedVideo()}" ajax="false" action="listVideos?faces-redirect=true" />
                         <p:commandButton id="helpButton" value="Help" actionListener="#{videoController.addInfo(2)}"/>
-                        <p:commandButton  id="submitButton" value="save" action="listVideos?faces-redirect=true" actionListener="#{videoController.editSelected()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
+                        <p:commandButton  id="submitButton" value="Save" action="listVideos?faces-redirect=true" actionListener="#{videoController.editSelected()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
                     </f:facet>
                 </p:panelGrid>  
             </p:fieldset>
