--- a/src/main/webapp/editDocument.xhtml
+++ b/src/main/webapp/editDocument.xhtml
@@ -38,7 +38,7 @@
                         <p:commandButton id="back" value="Back" ajax="false" action="listDocuments?faces-redirect=true" />
                         <p:commandButton id="deleteButton" value="Delete document" actionListener="#{libraryController.deleteSelectedLibraryItem()}" ajax="false" action="listDocuments?faces-redirect=true" />
                         <p:commandButton id="helpButton" value="Help" actionListener="#{libraryController.addInfo(2)}"/>
-                        <p:commandButton  id="submitButton" value="save" action="listDocuments?faces-redirect=true" actionListener="#{libraryController.editSelected()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
+                        <p:commandButton  id="submitButton" value="Save" action="listDocuments?faces-redirect=true" actionListener="#{libraryController.editSelected()}" ajax="false" icon="ui-icon-check" style="margin:0"/>
                     </f:facet>
                 </p:panelGrid>  
             </p:fieldset>
