--- a/src/main/webapp/viewDocumentation.xhtml
+++ b/src/main/webapp/viewDocumentation.xhtml
@@ -17,7 +17,7 @@
                         <f:param name="page" value="documentation/navigation"/>
                 </p:menuitem>                
                 <p:menuitem value="About MuldvarpWeb" action="#{documentationController.navigate()}">
-                        <f:param name="page" value="documentation/navigation"/>
+                        <f:param name="page" value="documentation/about"/>
                 </p:menuitem>
             </p:submenu>
             <p:submenu label="Management">
@@ -34,16 +34,16 @@
                     <f:param name="page" value="/documentation/documents"/>
                 </p:menuitem>
                 <p:menuitem value="Quizzes" action="#{documentationController.navigate()}">
-                    <f:param name="page" value="/documentation/empty"/>
+                    <f:param name="page" value="/documentation/quiz"/>
                 </p:menuitem>
                 <p:menuitem value="Videos" action="#{documentationController.navigate()}">
-                    <f:param name="page" value="/documentation/empty"/>
+                    <f:param name="page" value="/documentation/video"/>
                 </p:menuitem>
                 <p:menuitem value="Articles" action="#{documentationController.navigate()}">
-                    <f:param name="page" value="/documentation/empty"/>
+                    <f:param name="page" value="/documentation/articles"/>
                 </p:menuitem>
                 <p:menuitem value="People" action="#{documentationController.navigate()}">
-                    <f:param name="page" value="/documentation/empty"/>
+                    <f:param name="page" value="/documentation/people"/>
                 </p:menuitem>
             </p:submenu>
         </p:menu>
