--- a/src/main/webapp/newPerson.xhtml
+++ b/src/main/webapp/newPerson.xhtml
@@ -16,25 +16,25 @@
                         Person  
                     </f:facet>  
 
-                    <h:outputLabel value="Navn: " />
+                    <h:outputLabel value="Name: " />
                         <p:inputText value="#{personController.person.name}"/>
 
                         <h:outputLabel value="Affiliation: " />
                         <p:inputText value="#{personController.person.affiliation}"/>
 
-                        <h:outputLabel value="Stilling: " />
+                        <h:outputLabel value="Position: " />
                         <p:inputText value="#{personController.person.position}"/>
 
-                        <h:outputLabel value="Avdeling: " />
+                        <h:outputLabel value="Department: " />
                         <p:inputText value="#{personController.person.department}"/>
 
-                        <h:outputLabel value="Epost: " />
+                        <h:outputLabel value="Email: " />
                         <p:inputText value="#{personController.person.email}"/>
 
-                        <h:outputLabel value="Tlf: " />
+                        <h:outputLabel value="Telephone: " />
                         <p:inputText value="#{personController.person.phone}"/>
 
-                        <h:outputLabel value="Lokasjon: " />
+                        <h:outputLabel value="Location: " />
                         <p:inputText value="#{personController.person.location}"/>
                         
                     <f:facet name="footer">  
