added mobile site css

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -91,7 +91,7 @@
         <div id="bottombanner">
             <a href="Muldvarp-debug.apk">
                 <h:graphicImage name="android_vector.png" library="images"/>
-                <span style="padding-top: 125px; float:right;">Get the app</span>
+                <span>Get the app</span>
             </a>
         </div>
         
