first "stable" build

--- a/src/main/webapp/admin/editCourse.xhtml
+++ b/src/main/webapp/admin/editCourse.xhtml
@@ -23,7 +23,7 @@
                                 <h:outputText value="Name: " />
                             </div>
                             <div class="column_right">
-                                <h:inputText value="#{courseController.selected.name}" />
+                                <p:inputText value="#{courseController.selected.name}" required="true" />
                             </div>
                         </div>
                         <div>
@@ -31,7 +31,7 @@
                                 <h:outputText value="Detail: " />
                             </div>
                             <div class="column_right">
-                                <h:inputText value="#{courseController.selected.detail}" />
+                                <p:inputText value="#{courseController.selected.detail}" />
                             </div>
                         </div>
                         <div>
@@ -39,7 +39,7 @@
                                 <h:outputText value="Image url: " />
                             </div>
                             <div class="column_right">
-                                <h:inputText value="#{courseController.selected.imageurl}" />
+                                <p:inputText value="#{courseController.selected.imageurl}" />
                             </div>
                         </div>                        
                         <div>
