--- a/src/main/webapp/admin/editProgramme.xhtml
+++ b/src/main/webapp/admin/editProgramme.xhtml
@@ -21,7 +21,7 @@
                                 <h:outputText value="Name: " />
                             </div>
                             <div class="column_right">
-                                <h:inputText value="#{programmeController.selected.name}" />
+                                <p:inputText value="#{programmeController.selected.name}" required="true" />
                             </div>
                         </div>
                         <div>
@@ -29,7 +29,7 @@
                                 <h:outputText value="Detail: " />
                             </div>
                             <div class="column_right">
-                                <h:inputText value="#{programmeController.selected.detail}" />
+                                <p:inputText value="#{programmeController.selected.detail}" />
                             </div>
                         </div>
                     </div>
