--- a/src/main/webapp/documentation/video.xhtml
+++ b/src/main/webapp/documentation/video.xhtml
@@ -7,48 +7,34 @@
     <p:tabView id="tabView">  
   
         <p:tab id="tab1" title="Video">  
-            <h:panelGrid columns="2" cellpadding="10">  
-                <p:graphicImage id="tab1Img1" 
-                                value="/resources/images/stolen_videos.png" />             
-                <h:outputText id="tab1Text1"  
-                    value="The Quiz-section of the web-applications allows you to view, edit and set up videos for display in the Muldvarp Android application." />
-                <p:graphicImage onclick="dlg1.show()" id="tab1Img2" height="130" width="468"
-                                value="/resources/images/doc/hl_quizmain.png" />
-                <h:outputText id="tab1Text2"  
-                    value="The highlighted section is the main section, and clicking on the name of the entry in the table will take you to the edit-screen." />                        
-                <p:graphicImage onclick="dlg1.show()" id="tab1Img3" height="130" width="468"
-                                value="/resources/images/doc/hl_quizmain_del.png" />
-                <h:outputText id="tab1Text3"  
-                    value="Quizzes can be deleted by pressing the 'Delete' button at the end of the corresponding row." />
-            </h:panelGrid>  
-            <h:panelGrid columns="1">  
-            <h:outputText id="tab1Text7"  
-                value="Various other functions are also available in the footer, as pictured:" />
-            <h:outputText id="tab1Text4"  
-                    value="1- Create test-data." />
-            <h:outputText id="tab1Text5"  
-                    value="2- Return to main page." />
-            <h:outputText id="tab1Text6"  
-                    value="3- Create new video." />
-            </h:panelGrid>  
+            <h:panelGrid columns="1" cellpadding="10">  
+                <p:graphicImage value="/resources/images/VideoList_Legend.png" height="400" width="650"/>
+                <h:outputText value="1. - Names of the available videos."/>
+                <h:outputText value="2. - Descriptions/details for the videos."/>
+                <h:outputText value="3. - Type of video(usually a YouTube video)."/>
+                <h:outputText value="4. - Button to delete a video."/>
+                <h:outputText value="5. - Searchfield for the videos. Enter your search term, and press -Search-, and the videos will be filtered."/>
+                <h:outputText value="6. - Button to add a new video."/>
+            </h:panelGrid> 
         </p:tab>  
 
         <p:tab id="tab2" title="Adding a Video">  
-            <h:panelGrid columns="2" cellpadding="10">  
-                <p:graphicImage onclick="dlg4.show()" id="tab2Img1" height="93" width="280"
-                                value="/resources/images/doc/hl_context.png" />   
-                <h:outputText id="tab2Text"  
-                    value="As you navigate through the various parts of this webpage, breadcrumbs will be generated. 
-                    The highlighted text is clickable, and will take you to the corresponding section." />                
+            <h:panelGrid columns="1" cellpadding="10">  
+                <h:outputText value="To add a new video, press the -New video- Button."/>
+                <h:outputText value="For instructions on filling out the form, see -Editing a video-. The only difference is that all the fields are now empty."/>
             </h:panelGrid>  
         </p:tab>
-        <p:tab id="tab3" title="Editing a Quiz">  
-            <h:panelGrid columns="2" cellpadding="10">  
-                <p:graphicImage onclick="dlg4.show()" id="tab3Img1" height="93" width="280"
-                                value="/resources/images/doc/hl_context.png" />   
-                <h:outputText id="tab3Text"  
-                    value="As you navigate through the various parts of this webpage, breadcrumbs will be generated. 
-                    The highlighted text is clickable, and will take you to the corresponding section." />                
+        
+        <p:tab id="tab3" title="Editing a Video">  
+            <h:panelGrid columns="1" cellpadding="10">  
+                <p:graphicImage value="/resources/images/EditVideo_Legend.png" height="350" width="650"/>
+                <h:outputText value="1. - Title of the video. Press edit to change it, and finish by pressing return(enter button)."/>
+                <h:outputText value="2. - Description of the video. Press edit to change it, and finish by pressing return(enter button)."/>
+                <h:outputText value="3. - This is a switch between YouTube vidoes and other types. Normally this should be set to -Youtube/ID-."/>
+                <h:outputText value="4. - This is the URI reference to the video. To get the URI reference, copy the last part(after http://www.youtube.com/watch?v=) of the URL. see image below for illustration."/>
+                <p:graphicImage value="/resources/images/YouTube_GetURI.png" />
+                <h:outputText value="5/6. - These fields contain the URI's for the thumbnail, and icon of the video. These can normally be ignored."/>
+                <h:outputText value="7. - Press the -Save- button to save changes and return to the video list."/>
             </h:panelGrid>  
         </p:tab>
     </p:tabView> 
@@ -56,7 +42,6 @@
         <p:graphicImage id="dlg1Img1" value="/resources/images/doc/hl_quizmain.png" />  
     </p:dialog>
     <p:dialog header="Android app" widgetVar="dlg2" draggable="false" resizable="false">  
-        <p:graphicImage id="dlg1Img1" value="/resources/images/doc/hl_quizmain_del.png" />  
+        <p:graphicImage id="dlg1Img2" value="/resources/images/doc/hl_quizmain_del.png" />  
     </p:dialog> 
-    </p:dialog>
 </ui:composition>
