added image scaling for articles

--- a/src/main/webapp/article.xhtml
+++ b/src/main/webapp/article.xhtml
@@ -5,7 +5,10 @@
 
     <h:head>
         <link rel="stylesheet" href="resources/css/mobile.css" />
-        <meta name="viewport" content="user-scalable=no, width=device-width" />
+        <meta name="viewport" content="width=device-width" />
+        <style>
+            body {background-color: #fff;}
+        </style>
     </h:head>
 
     <h:body>
