Added methods to parse the HIALS database for useful Programme information, half-implemented TE scraper from tests as well as layout and webapp functionality changes.

--- a/src/main/webapp/admin/listProgramme.xhtml
+++ b/src/main/webapp/admin/listProgramme.xhtml
@@ -25,6 +25,7 @@
                     </p:column>
                     <f:facet name="footer">
                     <p:commandButton value="New Programme" action="#{programmeController.setSelected(null)}" />
+                    <p:commandButton value="TestData" action="#{programmeController.insertData()}" />
                     </f:facet>
                 </p:dataTable>          
             </p:fieldset>
