--- a/src/main/webapp/admin/editProgramme.xhtml
+++ b/src/main/webapp/admin/editProgramme.xhtml
@@ -21,7 +21,10 @@
                                 <h:outputText value="Name: " />
                             </div>
                             <div class="column_right">
-                                <p:inputText value="#{programmeController.selected.name}" required="true" />
+                                <p:inplace id="ajaxInplace" editor="true">  
+                                    <p:inputText value="#{programmeController.selected.name}"  
+                                                required="true" label="text"/>  
+                                </p:inplace>  
                             </div>
                         </div>
                         <div>
@@ -40,6 +43,23 @@
                     <div style="clear:both;" />
                     <div class="column">
                         <p:accordionPanel id="accordionTabs" multiple="true">
+                            <p:tab title="Programme Description">
+                                <p:fieldset legend="Description">
+                                    <p:inputTextarea  value="#{programmeController.selected.description}" rows="10" cols="120" counter="counter1" maxlength="2048"       
+                                counterTemplate="{0} characters remaining." autoResize="false"/> <br></br>
+                                <h:outputText id="counter1" />  
+                                </p:fieldset>
+                                <p:fieldset legend="Structure">
+                                <p:inputTextarea  value="#{programmeController.selected.pstructure}" rows="10" cols="120" counter="counter2" maxlength="2048"       
+                                counterTemplate="{0} characters remaining." autoResize="false"/>  <br></br>
+                                <h:outputText id="counter2" />  
+                                </p:fieldset>
+                                <p:fieldset legend="Formal prerequisites">                                
+                                <p:inputTextarea  value="#{programmeController.selected.prerequisites}" rows="5" cols="120" counter="counter3" maxlength="255"       
+                                counterTemplate="{0} characters remaining." autoResize="false"/>  <br></br>
+                                <h:outputText id="counter3" />  
+                                </p:fieldset>
+                            </p:tab>
                             <p:tab title="Courses in programmes">
                                     <p:pickList id="pickList"
                                                 value="#{programmeController.courses}" 
